--- a/roles/zabbix_agent_linux/tasks/main.yml
+++ b/roles/zabbix_agent_linux/tasks/main.yml
@@ -1,3 +1,17 @@
-- name: Instalação do Zabbix Agent
-  include_tasks: agent.yml
+- name: Instalação do Zabbix Agent Redhat
+  include_tasks: redhat.yml
+  when: ansible_facts['distribution_major_version'] == "8"
 
+
+- name: Instalação do zabbix agent debian
+  include_tasks: debian.yml
+  when: ansible_distribution == "Debian"
+
+- name: Instalação agente ubuntu
+  include_tasks: ubuntu.yml 
+  when: ansible_distribution == "Ubuntu"
+
+- name: Adcionando host Automatico via Ansible 
+  include_tasks: api.agent.create.yml
+
+  
