--- a/roles/zabbix_server/tasks/server.key.yml
+++ b/roles/zabbix_server/tasks/server.key.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for install_zabbix_server
 # -------------------------------------------------------------------------------------------#
-- name: ZBX SRV | Adcionando Repositorio Zabbix Server.
+- name: Repositorio Zabbix Server "{{ zbx_db }}".
   dnf:
     name: '{{ url_packages_zabbix }}'
     state: present
@@ -9,14 +9,14 @@
   when: ansible_facts['distribution_major_version'] == "8"
 # --------------------------------------------------------------------------------------------#
 #
-- name: ZBX SRV | Instalando pacotes zabbix-server zabbix-agent zabbix-sql-scripts
+- name: Instalar Pacotes zabbix-server zabbix-agent zabbix-sql-scripts {{ ansible_distribution }}.
   dnf:
     name: '{{ packages_zabbix_server}}'
     state: latest
   tags: zabbix_server
   when: ansible_facts['distribution_major_version'] == "8"
 # --------------------------------------------------------------------------------------------#
-- name: ZBX SRV | Iniciar/ Habilitar zabbix-server / zabbix-agent2
+- name: Iniciar/ Habilitar zabbix-server / zabbix-agent2 {{ ansible_distribution }}.
   systemd:
     name: zabbix-server
     state: started
@@ -25,7 +25,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
 # #----------------------------------------------------------------------------------------------#
 #
-- name: ZBX SRV | Adcionado Porta firewalld  Zabbix_Server/Zabbix_Agent
+- name: Adcionado Porta firewalld Zabbix_Server/Zabbix_Agent2 {{ ansible_distribution }}.
   firewalld:
     port: "{{ item }}"
     permanent: yes
@@ -37,7 +37,7 @@
   tags: zabbix_server
   when: ansible_facts['distribution_major_version'] == "8"
 # ----------------------------------------------------------------------------------------------#
-- name: FIREWALL | Reload no firewalld
+- name: Reload no firewalld {{ ansible_distribution }}.
   systemd:
     name: firewalld
     state: reloaded
@@ -45,7 +45,7 @@
   tags: zabbix_server
   when: ansible_facts['distribution_major_version'] == "8"
 #-------------------------------------------------------------------------------#
-- name: ZBX SRV | Setando configurações de segurança no arquivo zabbix_server.conf
+- name: Configurando o Arquivo zabbix_server.conf {{ ansible_distribution }}.
   lineinfile:
     dest: /etc/zabbix/zabbix_server.conf
     state: present
@@ -67,7 +67,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
   tags: zabbix_server
 #-----------------------------------------------------------------------------------#
-- name: MYCNF | Copiando Arquivo .my.cnf default
+- name: Copiando Arquivo .my.cnf default {{ ansible_distribution }}.
   copy: 
     src: "{{ item.src }}" 
     dest: "{{ item.dest }}"
@@ -76,7 +76,7 @@
     - { src: '.my.cnf', dest: '/root/.my.cnf'}
   when: ansible_facts['distribution_major_version'] == "8"
 #---------------------------------------------------------------------------------------------#
-- name: MYCNF | Copiando Para realizar Particionamento do Banco de Dados.
+- name: Copiando Arquivo Particionamento do Banco de Dados {{ ansible_distribution }}.
   copy: 
     src: "{{ item.src }}" 
     dest: "{{ item.dest }}"
@@ -133,7 +133,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
 
 # --------------------------------------------------------------------------------------------#
-- name: ZBX SRV | Iniciar/ Restart Zabbix-Server
+- name: Iniciar/ Restart Zabbix-Server
   systemd:
     name: "{{ item }}"
     state: restarted
