--- a/roles/zabbix_db/tasks/db.yml
+++ b/roles/zabbix_db/tasks/db.yml
@@ -3,14 +3,14 @@
 # https://docs.ansible.com/ansible/latest/collections/community/mysql/index.html
 
 # -----------------------------------------------------#
-- name: Instalando Banco de Dados .
+- name: Instalando Banco de Dados - {{ ansible_distribution }}/{{ ansible_all_ipv4_addresses[0]}}.
   dnf:
     name: "{{ packages_mysql }}"
     state: latest
   tags: zabbix_mydb
   when: ansible_distribution_file_variety == "RedHat"
 #----------------------------------------------------#
-- name: Remover pacotes Desnecessarios.
+- name: Remover Pacotes Desnecessarios - {{ zbx_db }}.
   dnf:
     name: mariadb-libs
     state: removed
@@ -18,7 +18,7 @@
   when: ansible_facts['distribution_major_version'] == "8" or ansible_distribution_file_variety == "RedHat"
   
 # ----------------------------------------------------#
-- name: Habilitando na Inicialização Service MYSQL
+- name: Habilitando na Inicialização Service MYSQL - {{ zbx_db }}
   systemd:
     name: mysqld
     state: started
@@ -27,7 +27,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
   
 #---------------------------------------------------------------------#
-- name: Criar senha de Root no banco de Dados
+- name: Criar senha de Root no banco de Dados - {{ zbx_db }}
   mysql_user:
     name: root
     password: "{{ root_pass }}"
@@ -37,7 +37,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
   
 #----------------------------------------------------------------------#
-- name: Copiando Arquivo .my.cnf default
+- name: Copiando Arquivo .my.cnf default - {{ zbx_db }}
   copy: 
     src: "{{ item.src }}" 
     dest: "{{ item.dest }}"
@@ -47,8 +47,8 @@
   tags: zabbix_mydb
   when: ansible_facts['distribution_major_version'] == "8"
   
-#-------------------------------------------------------------------___# 
-- name: Removendo contas de usuários 'anônimos' para localhost
+#-------------------------------------------------------------------------# 
+- name: Removendo contas de usuários 'anônimos' para localhost - {{ zbx_db }}
   mysql_user:
     name: ''
     host_all: yes
@@ -60,7 +60,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
   
 #---------------------------------------------------#
-- name: Removendo usuários 'zabbix' para o localhost se existir
+- name: Removendo usuários 'zabbix' para o localhost se existir - {{ zbx_db }}
   mysql_user:
     name: "{{ db_user_zabbix }}"
     host: localhost
@@ -72,7 +72,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
   
 #--------------------------------------------------------#
-- name: Removendo o MySQL 'test database'
+- name: Removendo o MySQL 'test database' - {{ zbx_db }}
   mysql_db:
     name: '{{ database_remove }}'
     state: absent
@@ -82,19 +82,19 @@
   when: ansible_facts['distribution_major_version'] == "8"
   
 #------------------------------#
-- name: Altera o plugin de autenticação do usuário 'root' do MYSQL para mysql_native_password
+- name: Altera o plugin de autenticação do usuário 'root' do MYSQL para mysql_native_password - {{ zbx_db }}
   shell: mysql -u root -p"{{ root_pass }}" -e 'UPDATE mysql.user SET plugin="mysql_native_password" WHERE user="root" AND host="localhost"'
   tags: zabbix_mydb
   when: ansible_facts['distribution_major_version'] == "8"
   
 #------------------------------------------------------------#
-- name: Privilégios de liberação para usuário 'root'
+- name: Privilégios de liberação para usuário 'root' - {{ zbx_db }}
   shell: mysql -u root -p"{{ root_pass }}" -e 'FLUSH PRIVILEGES'
   tags: zabbix_mydb
   when: ansible_facts['distribution_major_version'] == "8"
   
 #-----------------------------------------------------------------#  
-- name: Criando usuário 'zabbix' para o MYSQL
+- name: Criando usuário 'zabbix' para o MYSQL - {{ zbx_db }}
   mysql_user:
     name: "{{ db_user_zabbix }}"
     password: zabbix
@@ -107,7 +107,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
   
 #------------------------------------------#
-- name: Criando usuário 'zabbix_server' para o MYSQL
+- name: Criando usuário 'zabbix_server' para o MYSQL - {{ zbx_db }}
   mysql_user:
     name: "{{ db_user_server }}"
     password: "{{ db_user_pass_server }}"
@@ -122,7 +122,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
   
 #---------------------------------------------#
-- name: Criando usuário 'zabbix_web' para o MYSQL
+- name: Criando usuário 'zabbix_web' para o MYSQL - {{ zbx_db }}
   mysql_user:
     name: "{{ db_user_web }}"
     password: "{{ db_user_pass_web }}"
@@ -136,7 +136,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
 
 #-----------------------------------------------------------#
-- name: Criando usuário 'zabbixmonitdb' para Monitorar o Banco.
+- name: Criando usuário 'zabbixmonitdb' para Monitorar o Banco - {{ zbx_db }}
   mysql_user:
     name: "{{ db_user_monit_db }}"
     password: "{{ db_user_pass_db }}"
@@ -150,7 +150,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
 
 #-----------------------------------------------------------#
-- name: Criando banco de dados com nome 'zabbix'
+- name: Criando banco de dados com nome 'zabbix' - {{ zbx_db }}
   mysql_db:
     name: "{{ db_user_zabbix }}"
     login_host: localhost
@@ -163,7 +163,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
   
 #----------------------------------------------------------------#
-- name: Adcionado Porta firewalld  Zabbix_Server/Zabbix_Agent
+- name: Habilitando Portas Zabbix_Server/Zabbix_Agent2 - {{ zbx_db }}
   firewalld:
     port: "{{ item }}"
     permanent: yes
@@ -176,7 +176,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
   
 #-------------------------------------------------------------------------#
-- name: Realizando Reload no Firewall
+- name: Realizando Reload no Firewall - {{ zbx_db }}
   systemd:
     name: firewalld
     state: reloaded
