--- a/roles/zabbix_proxy/tasks/proxy.yml
+++ b/roles/zabbix_proxy/tasks/proxy.yml
@@ -1,6 +1,6 @@
 ---
 # tasks file for zabbix-proxy
-- name: Adcionando Repositorio Zabbix Proxy.
+- name: Adcionando Repositorio Zabbix Proxy - {{ ansible_distribution }}/{{ ansible_all_ipv4_addresses[0]}}.
   dnf:
     name: https://repo.zabbix.com/zabbix/{{ zbx_version }}/rhel/8/x86_64/zabbix-release-{{ zbx_version }}-1.el8.noarch.rpm
     state: present
@@ -9,12 +9,12 @@
   when: ansible_facts['distribution_major_version'] == "8"
 # --------------------------------------------------------------------------------------------#
 #
-- name: Instalando pacotes zabbix-proxy
+- name: Instalando pacotes zabbix-proxy {{ ansible_distribution }}.
   dnf: name='{{ packages_zabbix_proxy }}' state=latest
   tags: zabbix_proxy
   when: ansible_facts['distribution_major_version'] == "8"
 #--------------------------------------------------------------------------------------------#
-- name: Criar diretorio banco sqlite3
+- name: Criar diretorio banco sqlite3 {{ ansible_distribution }}.
   file:
     path: /var/lib/sqlite
     owner: zabbix
@@ -25,20 +25,21 @@
   tags: zabbix_proxy
   when: ansible_facts['distribution_major_version'] == "8"
 # --------------------------------------------------------------------------------------------#
-- name: Gerando Chave psk - ZBX - ZBX PROXY
-  shell: sudo sh -c "openssl rand -hex 32 > /etc/zabbix/proxy.psk"
+- name: Gerando Chave psk - {{ ansible_distribution }}.
+  shell: sudo sh -c "openssl rand -hex 32 > /etc/zabbix/{{ local }}.psk"
   ignore_errors: true
   tags: zabbix_proxy
   when: ansible_facts['distribution_major_version'] == "8"
 
 #------------------------------------------------------------------------------------------------#
-- name : Armazenando psk VARIAVEL
-  shell: "cat /etc/zabbix/proxy.psk"
+- name : Armazenando psk VARIAVEL {{ ansible_distribution }}.
+  shell: "cat /etc/zabbix/{{ local }}.psk"
   register: pks
   ignore_errors: yes
+  tags: zabbix_proxy
   when: ansible_facts['distribution_major_version'] == "8"
 #------------------------------------------------------------------------------------------------#
-- name: Armazenando saida pks.stdout
+- name: Armazenando saida pks.stdout {{ ansible_distribution }}.
   set_fact: 
        psk: "{{ pks.stdout }}"
 #------------------------------------------------------------------------------------------------#
@@ -54,7 +55,7 @@
     - { regexp: '^Server=127.0.0.1', line: 'Server={{ zbx_srv }}' }
     - { regexp: '^Hostname=Zabbix proxy', line: 'Hostname={{ proxy_name }}' }
     - { regexp: '# EnableRemoteCommands=0', line: 'EnableRemoteCommands=1' }
-    - { regexp: '^DBName=zabbix_proxy', line: 'DBName=/var/lib/sqlite/zabbix_proxy.db' }
+    - { regexp: '^DBName=zabbix_proxy', line: 'DBName=/var/lib/sqlite/{{ proxy_db }}' }
     - { regexp: '# StartPollers=5', line: 'StartPollers=10' }
     - { regexp: '# StartPinger=1', line: 'StartPinger=10' }
     - { regexp: '# ConfigFrequency=3600', line: 'ConfigFrequency=60' }
@@ -63,21 +64,21 @@
     - { regexp: '# TLSConnect=unencrypted', line: 'TLSConnect=psk' }
     - { regexp: '# TLSAccept=unencrypted', line: 'TLSAccept=psk' }
     - { regexp: '# TLSPSKIdentity=', line: 'TLSPSKIdentity={{ psk_identity }}' }
-    - { regexp: '# TLSPSKFile=', line: 'TLSPSKFile=/etc/zabbix/proxy.psk' }
+    - { regexp: '# TLSPSKFile=', line: 'TLSPSKFile=/etc/zabbix/{{ local }}.psk' }
   tags: zabbix_proxy
   when: ansible_facts['distribution_major_version'] == "8"
 #-----------------------------------------------------------------------------------------------#
-- name: ZBX PROXY | Realizar Restart do  Zabbix Proxy.
+- name: Restart do  Zabbix Proxy {{ ansible_distribution }}.
   systemd: name=zabbix-proxy state=started enabled=yes
   tags: zabbix_proxy 
   when: ansible_facts['distribution_major_version'] == "8"
 #----------------------------------------------------------------------------------------------#
-- name: Instalando pacote zabbix-agent2
+- name: Instalando Pacotes Agente2 {{ ansible_distribution }}.
   dnf: name='{{ packages_zabbix_agent }}' state=latest
   tags: zabbix_proxy
   when: ansible_facts['distribution_major_version'] == "8"
 #------------------------------------------------------------------------------------#
-- name: SSH | Setando configurações de segurança no arquivo zabbix_agent2.conf
+- name: Configurando o Arquivo zabbix_agent2.conf {{ ansible_distribution }}.
   lineinfile:
     dest: /etc/zabbix/zabbix_agent2.conf
     state: present
@@ -90,16 +91,16 @@
     - { regexp: "^Hostname=Zabbix server", line: "Hostname={{ ansible_fqdn }}" }
     - { regexp: "# Timeout=3", line: "Timeout=30" }
     - { regexp: "# DenyKey=system.run[*]", line: "AllowKey=system.run[*]" }
-  tags: zabbix_agent2
+  tags: zabbix_proxy
   when: ansible_facts['distribution_major_version'] == "8"
 #------------------------------------------------------------------------------------------------#
-- name: Restart zabbix-agent2
+- name: Restart zabbix-agent2 {{ ansible_distribution }}.
   systemd: name=zabbix-agent2 state=restarted enabled=yes
   tags: zabbix_proxy
   when: ansible_facts['distribution_major_version'] == "8"
 #-------------------------------------------------------------------------------------#
 
-- name: Adcionado Porta firewalld de Comunicação zabbix Proxy.
+- name: Adcionado Porta firewalld {{ ansible_distribution }}.
   firewalld:
     port: "{{ item }}"
     permanent: yes
@@ -111,75 +112,33 @@
   tags: zabbix_proxy
   when: ansible_facts['distribution_major_version'] == "8"
 #----------------------------------------------------------------------------------------------#
-- name: Realizar Restart do  Zabbix Proxy.
+- name: Restart do  Zabbix Proxy {{ ansible_distribution }}.
   systemd: name=zabbix-proxy state=restarted enabled=yes
   tags: zabbix_proxy 
   when: ansible_facts['distribution_major_version'] == "8"
 # ----------------------------------------------------------------------------------------------#
-- name: Reload no firewalld
+- name: Reload no firewalld {{ ansible_distribution }}.
   systemd: name=firewalld state=reloaded daemon_reload=yes enabled=yes
   tags: zabbix_proxy
   when: ansible_facts['distribution_major_version'] == "8"
 #------------------------------------------------------------------------------------------------#
-- name: Realizando Download dos Drivers odbc versão correspondende do banco
+- name: Realizando Download dos Drivers odbc versão correspondende do banco {{ ansible_distribution }}.
   shell: rpm -ivh https://downloads.mysql.com/archives/get/p/10/file/mysql-connector-odbc-{{ version_connector_odbc }}-1.el8.x86_64.rpm
   ignore_errors: yes
   tags: zabbix_proxy
   when: ansible_facts['distribution_major_version'] == "8"
 #------------------------------------------------------------------------------------------------#
-- name: Setando configurações no Arquivo odbc.ini
+- name: Configurando o Arquivo odbc.ini {{ ansible_distribution }}.
   blockinfile:
     path: /etc/odbc.ini
     block: |
-       [{{ font_dns }}]
+       [{{ FRONT_DSN }}]
        Description = MySQL Monitoring Database
        Driver      = MySQL ODBC 8.0 Unicode Driver
        Server      = {{ zbx_db }}
-       User        = {{ user_mysql_remote }}
-       Password    = {{ user_mysql_pass_remote }}
+       User        = {{ db_user_monit_db }}
+       Password    = {{ db_user_pass_db }}
        Port        = 3306
        Database    = zabbix
-  tags: zabbix_front
-  when: ansible_facts['distribution_major_version'] == "8"
-
-#-----------------------------------------------------------------------------------------------#
-- name: Criar o Proxy Modo Active.
-  local_action:
-    module: community.zabbix.zabbix_proxy
-    server_url: http://{{ zbx_front }}/zabbix/
-    login_user: '{{ username }}'
-    login_password: '{{ password }}'
-    proxy_name: '{{ proxy_name }}'
-    status: active
-    state: present
-    proxy_address: '{{ zbx_proxy }}'
-    tls_accept: PSK
-    tls_psk_identity: '{{ psk_identity }}'
-    tls_psk: "{{ psk }}"  
-  when: ansible_facts['distribution_major_version'] == "8"
-#-----------------------------------------------------------------------------------#
-- name: Criando Proxy no Frontend do zabbix .
-  local_action:
-    module: community.zabbix.zabbix_host
-    server_url: '{{ url_zabbix_api }}'
-    login_user: '{{ username }}'
-    login_password: '{{ password }}'
-    host_name: "{{ansible_fqdn}}"
-    visible_name: "{{ansible_fqdn}}"
-    host_groups:
-      - '{{ host_grupo }}'
-    link_templates:
-      - '{{ host_template }}'
-    status: enabled
-    state: present
-    inventory_mode: automatic
-    interfaces:
-      - type: '1'
-        main: 1
-        useip: 1
-        ip: "{{ ansible_all_ipv4_addresses[0]}}"
-        dns: ""
-        port: "10050"
-    proxy: '{{ proxy_name }}'
-  tags: api_zabbix
+  tags: zabbix_proxy
   when: ansible_facts['distribution_major_version'] == "8"
